# orsm

./: .clang-format  .gitignore  .pages  404.html  CMakeLists.txt  FindPythonExtensions.cmake  GenerateVersionHeader.cmake  LICENSE.html  README.md  cli_arguments.c  index.html  main.cpp  mkdocs.yml  my_minimum.hpp  my_queues.hpp  my_sort.cpp  my_sort.hpp  objects.inv  pyproject.toml  search.html  setup.py  sitemap.xml  test_example.c  version.c  version.h.in  versions.json
Testing/Temporary/: CTestCostData.txt
bar/: CMakeLists.txt  baz.c
data/: README.md  index.html
data/images/: cordelia.sixel  sheridan_methven_original_white_square_circle.txt
data/videos/: README.md  index.html
docs/: .pages  advanced.html  advanced.md  dependencies.html  dependencies.md  faqs.html  getting_started.html  getting_started.md  todo.html  todo.md
documentation/: SUMMARY.html
foo/: CMakeLists.txt  foo.c
hello/: CMakeLists.txt  hello.c
latest/: index.html
latest/data/: index.html
latest/docs/: advanced.html  dependencies.html  getting_started.html  todo.html
latest/lib/: index.html
latest/src/: index.html
lib/: README.md  index.html
misc/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  misc.cpp  misc.py
scripts/: gen_ref_pages.py
search/: search_index.json
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  arguments.py  cli.py  cmake_install.cmake  decorators.py  fox.c  index.html  logger.py  timing.py
src/baz/: baz.c
src/benchmark/: benchmark.py
src/benchmarking/: README.md  index.html
src/binding/: CMakeLists.txt  Makefile  README.md  __init__.py  binding.c  binding_module.c  cmake_install.cmake  example.py  examples.c  examples.h  examples_bindings.c  examples_bindings.h  hello_world.c  index.html
src/binding/benchmarks/: CTestTestfile.cmake  Makefile  cmake_install.cmake  example.py  index.html
src/binding/examples/: CMakeLists.txt  Makefile  cmake_install.cmake  examples_bindings.c  examples_bindings.h
src/binding/test/: CMakeLists.txt  test_binding_import.py
src/binding/tests/: CTestTestfile.cmake  Makefile  binding_import.py
src/cli/: Makefile  README.md  cmake_install.cmake  index.html
src/cli/tests/: CMakeLists.txt  Makefile  cli_arguments_0.c  cli_arguments_version.c  cli_testing.h  cmake_install.cmake
src/common/: CMakeLists.txt  Makefile  arguments.py  cli.hpp  cli.py  cmake_install.cmake  decorators.py  files.py  logger.py  output.py  profilers.py  profiling.py  suppressor.c  suppressor_bindings.c  timing.py
src/common/suppressor/: CMakeLists.txt  Makefile  __init__.py  cmake_install.cmake  suppressor.h  suppressor_bindings.c
src/common/suppressor/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  suppressor.c
src/common/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  arguments.py  cli_print_logs.py  cmake_install.cmake  decorators.py  files.py  logger.py  output.py  output_suppressor_c_extension.py  output_suppressor_c_extension.sh  timing.py
src/error_codes/: CMakeLists.txt  Makefile  cmake_install.cmake  error_codes.c  error_codes.h  index.html
src/hello_world/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  hello_world.c  hello_world.cpp  hello_world.hpp  hello_world_example.cpp  index.html
src/hello_world/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hello_world.c  hello_world.cpp
src/logging/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  index.html  logging.h  logging.hpp
src/logging/demo/: CTestTestfile.cmake  Makefile
src/logging/tests/: CMakeLists.txt  Makefile  example_logging.c  example_logging.cpp  logging.cpp  logging_test.c
src/media/: CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  images.py  index.html  window.py
src/minimum/: my_minimum.hpp
src/orsm/: index.html
src/orsm.egg-info/: PKG-INFO  SOURCES.txt
src/queues/: my_queues.hpp
src/qux/: benchmark.py
src/rubik/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  index.html
src/rubiks/: CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  index.html
src/sorting/: main.cpp  my_sort.hpp
src/stacks/: my_stacks.hpp
src/testing/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  index.html  testing.h
src/testing/test/: CMakeLists.txt  example.c  test_basic_python.py  test_basic_python_again.py
src/testing/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  basic_python.py  example.c  example.cpp  index.html  test_example.c
src/tests/: cli_print_logs.py  test_arguments.py  test_decorators.py  test_logger.py  test_output.py  test_timing.py  test_version.py
src/version/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  index.html  version.c  version_bindings.c  version_bindings.h  version_module.c
src/version/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  version.c  version_bindings.py
testing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
v0.0.2/: 404.html  index.html
v0.0.2/data/: index.html
v0.0.2/docs/: advanced.html  dependencies.html  getting_started.html  todo.html
v0.0.2/search/: search_index.json
v0.0.2/src/: index.html
v0.0.3/: 404.html  index.html  sitemap.xml
v0.0.3/data/: index.html
v0.0.3/docs/: advanced.html  dependencies.html  getting_started.html  todo.html
v0.0.3/search/: search_index.json
v0.0.3/src/: __init__.py  index.html
v0.0.3/testing.egg-info/: PKG-INFO  SOURCES.txt
v0.0.4/: 404.html  index.html  sitemap.xml
v0.0.4/data/: index.html
v0.0.4/docs/: advanced.html  dependencies.html  getting_started.html  todo.html
v0.0.4/lib/: index.html
v0.0.4/search/: search_index.json
v0.0.4/src/: CMakeLists.txt  Makefile  cmake_install.cmake  index.html
v0.0.4/testing.egg-info/: PKG-INFO
v0.0.5/: 404.html  index.html  sitemap.xml
v0.0.5/data/: index.html
v0.0.5/docs/: advanced.html  dependencies.html  getting_started.html  todo.html
v0.0.5/lib/: index.html
v0.0.5/search/: search_index.json
v0.0.5/src/: cmake_install.cmake  index.html
(+386 files in other folders)
