[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orsm"
version = "0.0.1"
authors = [{ name="Dr Oliver Sheridan-Methven", email="oliver.sheridan-methven@hotmail.co.uk" }]
description = "Useful utility scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py",
    "varname",
    "more-itertools",
    "haggis",
    "termcolor",
    "testfixtures",
    "pillow",
    "numpy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
      "mkdocs",
      "mkdocs-material",
      "mkdocs-exclude",
      "mkdocs-same-dir",
      "mkdocs-awesome-pages-plugin",
      "mkdocs-git-revision-date-localized-plugin",
      "mkdocs-material[imaging]",
      "mike",
]

[project.urls]
Homepage = "https://github.com/oliversheridanmethven/orsm"
Issues = "https://github.com/oliversheridanmethven/orsm/issues"
